--- a/PlantInsect_SparCC.Rmd
+++ b/PlantInsect_SparCC.Rmd
@@ -217,6 +217,8 @@ Layers<-length(g.list)
 node.ab.matrix <- matrix((abundances+1)*10, Nodes, Layers)
 ```
 Construímos el gráfico 3D de una red multicapa multiplex con el paquete muxViz.
+
+Aquí falla!!
 ```{r echo=FALSE, cache=FALSE, results=FALSE, warning=FALSE, comment=FALSE, warning=FALSE}
 lay <- layoutMultiplex(g.list, layout="fr", ggplot.format=F, box=T)
 plot_multiplex3D(g.list, layer.layout=lay,
